<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sendMsgLayout"
    android:layout_width="fill_parent"
    android:layout_height="45dp"
    android:background="#fefefe"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/voice_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:padding="8dp"
        android:src="@drawable/chat_voice_btn2"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/voice_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:src="@drawable/keyboard"
        android:padding="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1.0">


        <EditText
            android:id="@+id/send_edt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/chat_edit_bg"
            android:gravity="center_vertical|left"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:visibility="visible"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/voice_press_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/chat_voice_btn_selector"
            android:text="@string/press_say"
            android:visibility="gone" />

        <TextView
            android:id="@+id/send_voice_btn"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:background="@drawable/chat_voice_bg"
            android:clickable="true"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/press_say"
            android:textColor="#b3b3b3"
            android:textSize="16sp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btn_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:padding="6dp"
            android:src="@drawable/chat_emoji4" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp">

        <ImageView
            android:id="@+id/plus_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:padding="7dp"
            android:src="@drawable/chat_plus3"
            android:visibility="visible" />

        <TextView
            android:id="@+id/btn_send"
            android:layout_width="50dp"
            android:layout_height="34dp"
            android:layout_centerInParent="true"
            android:background="@drawable/chat_send_bg"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/btn_send"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:visibility="gone" />

    </RelativeLayout>
</LinearLayout>
