<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_search"
        android:layout_width="266dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/friendsearch" />

    <Button
        android:id="@+id/button_friend_group"
        android:text="好友分组"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/friend_group" />

    <ListView
        android:id="@+id/lv_friend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
